tests/errors/or_handler_requires_a_fallible_expression.n
// Error test: or handler on non-fallible function

fn not_fallible() -> int {
    return 42;
}

fn main() {
    x := not_fallible() or return;
}
